spikes/shapes/shape-evidence/tests/ui/fail/fixed_rank_mismatch.stderr
error[E0308]: mismatched types
 --> tests/ui/fail/fixed_rank_mismatch.rs:9:46
  |
9 |     let _ = builder.pointwise_shaped(matrix, vector);
  |                     ----------------         ^^^^^^ expected `2`, found `1`
  |                     |
  |                     arguments to this method are incorrect
  |
  = note: expected struct `ShapedValue<F32, Rank<2>>`
             found struct `ShapedValue<F32, Rank<1>>`
note: method defined here
 --> src/lib.rs
  |
  |     pub fn pointwise_shaped<T, E: ShapeEvidence>(
  |            ^^^^^^^^^^^^^^^^
